--- a/index_0.html
+++ b/index_0.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Css/index0.css">
+    <link rel="stylesheet" href="Css/index0.css">
     <title>Connexion</title>
 </head>
 <body>
@@ -12,12 +12,12 @@
         <div class="connect">
             <form action="">
                 <img style="width: 100px; 
-                margin: auto;" src="../Media/img/icon-removebg-preview.png" alt="#">
+                margin: auto;" src="Media/img/icon-removebg-preview.png" alt="#">
                 <label for="Mail"><ion-icon name="mail"></ion-icon><input type="email" placeholder="Insérer votre email"></label>
                 <label for="Password"><ion-icon name="lock-closed"></ion-icon><input type="password" placeholder="Password"></label>
                 <button type="submit">Se connecter</button>
             </form>
-        <a href="index_01.html" target="_self">Créer un compte</a>
+        <a href="Html/index_1.html" target="_self">Créer un compte</a>
         </div>
     </main>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
