--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -39,7 +39,7 @@
         <p>Vous recevrez des Emails</p>
         <button id="submitButton" type="submit">S'inscrire</button>
       </form>
-      <a href="../Html/index_0.html">Se connecter</a>
+      <a href="../index.html">Se connecter</a>
     </div>
     <script
       type="module"
