--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -12,10 +12,10 @@
       <h1>Inscription</h1>
       <form action="../data/dataForm.php" method="post" id="myform">
         <label for="Name"
-          ><input type="text" name="Name" placeholder="Nom" required
+          ><input type="text" name="Name" id="firstName" placeholder="Nom" required
         /></label>
         <label for="Prenom"
-          ><input type="text" name="Prenom" placeholder="Prénom" required
+          ><input type="text" name="Prenom" id="lastName" placeholder="Prénom" required
         /></label>
         <label for="Age"
           ><input type="date" name="Age" id="birthday" required
