--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <h1>Inscription</h1>
-      <form action="../data/dataForm.php" method="post" id="myform">
+      <form action="../data/dataForm.php" method="post" id="myForm">
         <label for="Name"
           ><input type="text" name="Name" id="firstName" placeholder="Nom" required
         /></label>
