--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -10,12 +10,22 @@
   <body>
     <div>
       <h1>Inscription</h1>
-      <form action="../data/data_form.php" method="post" id="myForm">
+      <form action="#" method="post" id="myForm">
         <label for="Name"
-          ><input type="text" name="Name" id="firstName" placeholder="Nom" required
+          ><input
+            type="text"
+            name="Name"
+            id="firstName"
+            placeholder="Nom"
+            required
         /></label>
         <label for="Prenom"
-          ><input type="text" name="Prenom" id="lastName" placeholder="Prénom" required
+          ><input
+            type="text"
+            name="Prenom"
+            id="lastName"
+            placeholder="Prénom"
+            required
         /></label>
         <label for="Age"
           ><input type="date" name="Age" id="birthday" required
@@ -41,6 +51,62 @@
       </form>
       <a href="../index.html">Se connecter</a>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.2/firebase-firestore.js"></script>
+    <script type="module">
+      import {
+        getFirestore,
+        collection,
+        addDoc,
+      } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyCrz8Y4neeO7FsAjfbIZTnQ5e3ufeeIudM",
+        authDomain: "neruproject-a28a8.firebaseapp.com",
+        projectId: "neruproject-a28a8",
+        storageBucket: "neruproject-a28a8.appspot.com",
+        messagingSenderId: "341031686344",
+        appId: "1:341031686344:web:452def9758c27648eb15fd",
+        measurementId: "G-ZLXVKKTN82",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+      const firestore = getFirestore();
+
+      document
+        .getElementById("myForm")
+        .addEventListener("submit", async function (event) {
+          event.preventDefault();
+
+          const firstName = document.getElementById("firstName").value;
+          const lastName = document.getElementById("lastName").value;
+          const birthday = document.getElementById("birthday").value;
+          const email = document.getElementById("mail").value;
+          const password = document.getElementById("password").value;
+
+          try {
+            const docRef = await addDoc(collection(firestore, "users"), {
+              firstName,
+              lastName,
+              birthday,
+              email,
+              password,
+            });
+            console.log("Document written with ID: ", docRef.id);
+          } catch (e) {
+            console.error("Error adding document: ", error);
+          }
+        });
+    </script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -49,6 +115,5 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <script src="../Js/form_01.JS"></script>
   </body>
 </html>
