--- a/Html/test.html
+++ b/Html/test.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ネール</title>
+    <title>kkl</title>
 </head>
 <body>
-    
+    screen_lock_landscape
+    <script src="../Js/openAiNode.js"></script>
 </body>
 </html>
