--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -46,7 +46,7 @@
             placeholder="Saisissez un mot de passe"
             required
         /></label>
-        <p>Vous recevrez des Emails</p>
+        <a href="index_2.html">Vous recevrez des Emails</a>
         <button id="submitButton" type="submit">S'inscrire</button>
       </form>
       <a href="../index.html">Retour</a>
