--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <h1>Inscription</h1>
-      <form action="#" method="post" id="myForm">
+      <form action="#" id="myForm" method="POST" data-netlify="true">
         <label for="Name"
           ><input
             type="text"
