--- a/Html/index_2.html
+++ b/Html/index_2.html
@@ -9,10 +9,10 @@
     <title>ネール => ChatMe</title>
 </head>
 <body id="body" onload="showDiv('chatMess_01', Chat_01)">
-    <div class="container_3" style="position: fixed; z-index: 200;" id="page_3">
-        <div class="contain">
-          <div class="side_bar" id="side_bar">
-            <div class="nav_header">
+    <div class="container_3" style="position: fixed; z-index: 200; height: 100%;" id="page_3">
+        <div class="contain" style="height: 100%;">
+          <div class="side_bar" id="side_bar" style="overflow-y: none; height: 100%;">
+            <div class="nav_header" style="padding-top: 50px;">
               <img src="../Media/img/lee ji-eiun.jpg" style="border-radius: 50%;">
               <span></span>
               <h2>Jennie.</h2>
