--- a/Html/test.html
+++ b/Html/test.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     screen_lock_landscape
-    <script src="../Js/openAiNode.js"></script>
+    <script src="../Js/Gtrue.js"></script>
 </body>
 </html>
