--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <h1>Inscription</h1>
-      <form action="#" id="myForm" method="POST" data-netlify="true">
+      <form id="myForm" method="POST" data-netlify="true">
         <label for="Name"
           ><input
             type="text"
@@ -51,7 +51,7 @@
       </form>
       <a href="../index.html">Retour</a>
     </div>
-    <script src="../Js/authFireBase.js" type="module"></script>
+    <script src="../Js/GoTrueSignUp.js" type="module"></script>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
