--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="Html/index_1.html" target="_self">Créer un compte</a>
         </div>
     </main>
+    <script src="./Js/GoTrueSignin.js" type="module"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
