--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <main>
         <div class="connect">
-            <form action="">
+            <form action="" id="login-form">
                 <img style="width: 100px; 
                 margin: auto;" src="Media/img/icon-removebg-preview.png" alt="#">
-                <label for="Mail"><ion-icon name="mail"></ion-icon><input type="email" placeholder="Insérer votre email"></label>
-                <label for="Password"><ion-icon name="lock-closed"></ion-icon><input type="password" placeholder="Password"></label>
+                <label for="Mail"><ion-icon name="mail"></ion-icon><input type="email" id="mail" placeholder="Insérer votre email"></label>
+                <label for="Password"><ion-icon name="lock-closed"></ion-icon><input id="password" type="password" placeholder="Password"></label>
                 <button type="submit">Se connecter</button>
             </form>
         <a href="Html/index_1.html" target="_self">Créer un compte</a>
