--- a/Html/index_1.html
+++ b/Html/index_1.html
@@ -72,7 +72,7 @@ form.addEventListener('submit', (event) => {
 
   // Envoyez les données au serveur PHP via AJAX
   const xhr = new XMLHttpRequest();
-  xhr.open('POST', 'url_de_votre_application_php');
+  xhr.open('POST', 'https://github.com/Lightminedust/Neru-Project/blob/main/php/data.php');
   xhr.setRequestHeader('Content-Type', 'application/json');
   xhr.onload = () => {
     if (xhr.status === 200) {
